--- a/scss/pages/_frontpage.scss
+++ b/scss/pages/_frontpage.scss
@@ -103,14 +103,22 @@ main{
                 padding: 2rem 0 !important;
                 font-family: $font-third;
                 color: $minsk;
+                font-size:2.5rem;
 
                 @include breakPoints(1400px, 768px){
                     padding-left: 3rem !important;
                     letter-spacing: 2px;
-                    font-size:2.5rem;
+                   
 
                 }
+                
+                br{
+                    display: none;
 
+                    @include breakPoints(1200px){
+                        display: block;
+                    }
+                }
                 span{
                     color: $flash-mahogany;
                     font-size: 30px !important;
